[project]
name = "xpresspay"
version = "0.2.1"
description = "Python SDK for integrating the Xpress payment gateway (xpresspayments.com)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Dayo PraiseGod Adesanmi", email = "dayopraisegod@gmail.com" }
]
requires-python = ">=3.9"
keywords = ["payment", "xpresspay", "nigeria", "fintech", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/praisegee/xpresspay"
Documentation = "https://praisegee.github.io/xpresspay/"
Issues = "https://github.com/praisegee/xpresspay/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xpresspay"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.9.0",
    "pytest>=8.4.2",
    "pytest-httpx>=0.30.0",
    "ruff>=0.15.2",
]
docs = [
    "mkdocs-material>=9.5.0",
]
